# grafika-komputerowa-5

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/glad-4.5/: CMakeLists.txt
lib/glad-4.5/include/glad/: glad.h
lib/glad-4.5/src/: glad.c
lib/imgui-1.86/: CMakeLists.txt
lib/stb_image-2.27/: CMakeLists.txt
resources/models/asphalt/: asphalt.mtl
resources/models/building1/: Building.mtl  untitled.mtl
resources/models/building2/: Farm_house.mtl  untitled.mtl
resources/models/lamppost/: street lamp.mtl
resources/models/teapot/: teapot.mtl
resources/models/vazz/: Vazz.mtl
resources/shaders/: fragment.frag  gouraud.frag  gouraud.vert  phong.frag  phong.vert  vertex.vert
shaders/: fragment.frag  vertex.vert
src/: main.cpp
src/display/: display.cpp  display.hpp
src/object/: render_object.cpp  render_object.hpp  scene.cpp  scene.hpp
src/render/: camera.cpp  camera.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/render/shader/: phong_shader.cpp  phong_shader.hpp  shader.cpp  shader.hpp
